Atualização da evolução do projeto antes do Docker